# erbot

./: .gitignore  Cargo.toml
src/: main.rs
src/api/: user.rs
src/bot/: api.rs  commands.rs  database.rs  mod.rs  util.rs
src/commands/: basics.rs
