[package]
name = "erbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde = { version = "1.0.197", features = ["derive"] }
ureq = { version = "2.9.6", features = ["json", "charset"] }
serde_json = "1.0.114"
serde_derive = "1.0.197"
rusqlite = "0.31.0"
anyhow = "1.0.80"

